syntax="proto3";

option go_package = "github.com/cosmos/cosmos-sdk/testutil/testdata/v2";


message Snake {
    string name = 1;
    int64 age = 2;
}